--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
       </div>
 
     <header>
-      <!-- <video autoplay muted loop id="myVideo">
-        <source id='video' src="assets/video/Help.mp4" type="video/mp4" >
-      </video> -->
-      <!-- <div class="blackVideoOverlay"></div> -->
+      <div class="headerOverlay"></div>
       <a href="#"><img class="logo" src="assets/img/png/Logo.png" alt=""></a>
 
       <div class="videoDiv">
