--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#"><img class="logo" src="assets/img/png/Logo.png" alt=""></a>
 
       <div class="videoDiv">
-        <video autoplay muted loop id="myVideo">
+        <video autoplay muted loop id="myVideo" poster="img/cms.jpg">
           <source id='video' src="assets/video/graph.mp4" type="video/mp4" >
         </video>
         <div class="videoOverlay"></div>
