--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="assets/css/style.css" media="none" onload="if(media!='all')media='all'"  async>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" media="none" onload="if(media!='all')media='all'" defer>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" media="none" onload="if(media!='all')media='all'" defer>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" media="none" onload="if(media!='all')media='all'" defer>
   </head>
   <body>
-    <link rel="stylesheet" href="assets/css/style.css" media="all"  lazyload>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" media="all" lazyload>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" media="all" lazyload>
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" media="all" lazyload>
 
     <div class=" SearchDivLayer" >
         <div class="exitButton">
